--- a/.gitattributes
+++ b/.gitattributes
@@ -19,3 +19,4 @@ rawdata/N976747_FKDO220045156-1A_HYK3VDSX2_L4_1.fq.gz filter=lfs diff=lfs merge=
 rawdata/N976747_FKDO220045156-1A_HYK3VDSX2_L4_2.fq.gz filter=lfs diff=lfs merge=lfs -text
 rawdata/T976747_FKDO220075706-1A_HYNGFDSX2_L3_1.fq.gz filter=lfs diff=lfs merge=lfs -text
 third_party_software/** filter=lfs diff=lfs merge=lfs -text
+third_party_software filter=lfs diff=lfs merge=lfs -text
